Update LinkedDataService.java
Handle compound keys, fixes #2668
Some small refactoring to make the code more readable.