@@ -19,7 +19,7 @@ import org.eclipse.rdf4j.rio.helpers.StatementCollector;
 import org.molgenis.emx2.*;
 
 public class LinkedDataService {
-  private static ObjectMapper jsonMapper =
+  private static final ObjectMapper jsonMapper =
       new ObjectMapper()
           .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS)
           .setDateFormat(new StdDateFormat().withColonInTimeZone(true));
@@ -46,7 +46,7 @@ public class LinkedDataService {
 
   public static void getJsonLdForTable(Table table, PrintWriter writer) {
     try {
-
+      // fixme: construct URL based on the actual server URL
       String path = "http://localhost/" + table.getSchema().getName() + "/";
 
       // define the selection
@@ -64,27 +64,20 @@ public class LinkedDataService {
                       r ->
                           r.getSemantics() != null
                               && Arrays.asList(r.getSemantics()).contains("id"))
-                  .collect(Collectors.toList());
+                  .toList();
           // if no with id, we use primary key
-          if (refId.size() == 0) {
-            refId =
-                c.getRefTable().getColumns().stream()
-                    .filter(r -> r.getKey() == 1)
-                    .collect(Collectors.toList());
-          }
-          // check if only one
-          if (refId.size() > 1) {
-            throw new MolgenisException(
-                "Generation of jsonLd failed: more than one column marked with 'id' or primary key in table "
-                    + table.getName());
+          if (refId.isEmpty()) {
+            refId = c.getRefTable().getColumns().stream().filter(r -> r.getKey() == 1).toList();
           }
           // add to select
-          q.select(s(c.getName(), s(refId.get(0).getName())));
+          for (var id : refId) {
+            q.select(s(c.getName(), s(id.getName())));
+          }
         } else if (c.isOntology()) {
           Column ontoRefCol =
               c.getRefTable().getColumns().stream()
                   .filter(r -> r.getName().equals("ontologyTermURI"))
-                  .collect(Collectors.toList())
+                  .toList()
                   .get(0);
           q.select(s(c.getName(), s(ontoRefCol.getName())));
         } else {
@@ -92,123 +85,140 @@ public class LinkedDataService {
         }
       }
 
-      // create the context
-      Map<String, Object> context = new LinkedHashMap<>();
-      context.put(table.getName(), path + table.getName());
-
-      // is composition of type specific context elements
-      for (Column c : table.getMetadata().getColumns()) {
-        if (c.getSemantics() != null) {
-          List<String> type =
-              Arrays.stream(c.getSemantics())
-                  // we omit the 'id' keyword, we use this to pass URI for references
-                  // or use as object id
-                  .filter(s -> !"id".equals(s))
-                  .collect(Collectors.toList());
-
-          if (type.size() > 1) {
-            context.put(c.getName(), type);
-          } else if (type.size() == 1) {
-            context.put(c.getName(), type.get(0));
-          }
-        }
-      }
-
       // we use the query here
       String json = q.retrieveJSON();
       Map<String, List<Map<String, Object>>> jsonMap = jsonMapper.readValue(json, Map.class);
-      List<Map<String, Object>> data = jsonMap.get(table.getIdentifier());
-
-      // enhance json
-      for (Map row : data) {
-        if (table.getMetadata().getSemantics() != null) {
-          List<String> type =
-              Arrays.stream(table.getMetadata().getSemantics()).collect(Collectors.toList());
-          if (type.size() > 1) {
-            row.put("@type", type);
-          } else if (type.size() == 1) {
-            row.put("@type", type.get(0));
-          }
-        }
-        for (Column c : table.getMetadata().getColumns()) {
-          // check id
-          if (c.getSemantics() != null && Arrays.asList(c.getSemantics()).contains("id")) {
-            row.put("@id", row.get(c.getName()));
-          }
-          // flatten references
-          if (c.isReference()) {
-            Column temp = null;
-            String prefixTemp = "";
-            for (Column r : c.getRefTable().getColumns()) {
-              if (r.getSemantics() != null && Arrays.asList(r.getSemantics()).contains("id")) {
-                temp = r;
-              }
-            }
-            if (temp == null) {
-              temp = c.getRefTable().getPrimaryKeyColumns().get(0);
-              prefixTemp = path + c.getRefTableName() + "/";
-            }
-            final Column ref = temp;
-            final String prefix = prefixTemp;
-            if (c.isRef() && !c.isOntology()) {
-              Map map = ((Map<String, Object>) row.get(c.getName()));
-              if (map != null) {
-                row.put(c.getName(), map.get(ref.getName()));
-              }
-            } else if (c.isOntology()) {
-              Object rowObj = row.get(c.getName());
-              if (rowObj == null) {
-                row.put(c.getName(), null);
-              } else if (rowObj instanceof List) {
-                List<Map> listOfObjects = (List<Map>) row.get(c.getName());
-                if (listOfObjects != null) {
-                  row.put(
-                      c.getName(),
-                      listOfObjects.stream()
-                          .map(o -> prefix + o.get(ref.getName()))
-                          .collect(Collectors.toList()));
-                }
-              } else if (rowObj instanceof Map) {
-                Map ontologyTerm = (Map) row.get(c.getName());
-                row.put(c.getName(), ontologyTerm.get("ontologyTermURI"));
-              } else {
-                throw new Exception(
-                    "Expected ontology row to be instance of map or list but was "
-                        + rowObj.getClass());
-              }
-            } else {
-              // list of maps
-              List<Map<String, Object>> listOfObjects =
-                  (List<Map<String, Object>>) row.get(c.getName());
-              if (listOfObjects != null) {
-                row.put(
-                    c.getName(),
-                    listOfObjects.stream()
-                        .map(o -> prefix + o.get(ref.getName()))
-                        .collect(Collectors.toList()));
-              } else {
-                row.put(c.getName(), null);
-              }
-            }
-          }
-        }
-        // check if _molgenisid has been set via @id
-        if (row.get("@id") == null) {
-          row.put(
-              "@id",
-              path + table.getName() + "/" + row.get(table.getMetadata().getPrimaryKeys().get(0)));
-        }
+      List<Map<String, Object>> data = new ArrayList<Map<String, Object>>();
+      var jsonForTable = jsonMap.get(table.getIdentifier());
+      if (jsonForTable != null) {
+        data.addAll(jsonForTable);
+        annotate(table, data, path);
       }
 
       // assemble the json-ld for this table
       Map<String, Object> result = new LinkedHashMap<>();
-      result.put("@context", context);
+      result.put("@context", createContext(table, path));
       result.put("@id", path + table.getName());
       result.put(table.getName(), data);
 
       writer.append(jsonMapper.writerWithDefaultPrettyPrinter().writeValueAsString(result));
     } catch (Exception e) {
       throw new MolgenisException("jsonld export failed", e);
+    }
+  }
+
+  private static Map<String, Object> createContext(Table table, String path) {
+    Map<String, Object> context = new LinkedHashMap<>();
+    context.put(table.getName(), path + table.getName());
+
+    // is composition of type specific context elements
+    for (Column c : table.getMetadata().getColumns()) {
+      if (c.getSemantics() != null) {
+        List<String> type =
+            Arrays.stream(c.getSemantics())
+                // we omit the 'id' keyword, we use this to pass URI for references
+                // or use as object id
+                .filter(s -> !"id".equals(s))
+                .collect(Collectors.toList());
+
+        if (type.size() > 1) {
+          context.put(c.getName(), type);
+        } else if (type.size() == 1) {
+          context.put(c.getName(), type.get(0));
+        }
+      }
+    }
+    return context;
+  }
+
+  /**
+   * Enrich the given map with JSON-LD semantic annotations.
+   *
+   * @param table the table that is represented in the data
+   * @param data the data to annotate
+   * @param path the path component of the default @id URL
+   * @throws Exception when an ontology type does not match the expected type (should not happen)
+   */
+  private static void annotate(
+      final Table table, final List<Map<String, Object>> data, final String path) throws Exception {
+    for (var row : data) {
+      if (table.getMetadata().getSemantics() != null) {
+        List<String> type =
+            Arrays.stream(table.getMetadata().getSemantics()).collect(Collectors.toList());
+        if (type.size() > 1) {
+          row.put("@type", type);
+        } else if (type.size() == 1) {
+          row.put("@type", type.get(0));
+        }
+      }
+      for (Column c : table.getMetadata().getColumns()) {
+        // check id
+        if (c.getSemantics() != null && Arrays.asList(c.getSemantics()).contains("id")) {
+          row.put("@id", row.get(c.getName()));
+        }
+        // flatten references
+        if (c.isReference()) {
+          Column temp = null;
+          String prefixTemp = "";
+          for (Column r : c.getRefTable().getColumns()) {
+            if (r.getSemantics() != null && Arrays.asList(r.getSemantics()).contains("id")) {
+              temp = r;
+            }
+          }
+          if (temp == null) {
+            temp = c.getRefTable().getPrimaryKeyColumns().get(0);
+            prefixTemp = path + c.getRefTableName() + "/";
+          }
+          final Column ref = temp;
+          final String prefix = prefixTemp;
+          if (c.isRef() && !c.isOntology()) {
+            var map = ((Map<String, Object>) row.get(c.getName()));
+            if (map != null) {
+              row.put(c.getName(), map.get(ref.getName()));
+            }
+          } else if (c.isOntology()) {
+            Object rowObj = row.get(c.getName());
+            if (rowObj == null) {
+              row.put(c.getName(), null);
+            } else if (rowObj instanceof List) {
+              var listOfObjects = (List<Map<String, Object>>) row.get(c.getName());
+              if (listOfObjects != null) {
+                row.put(
+                    c.getName(),
+                    listOfObjects.stream()
+                        .map(o -> prefix + o.get(ref.getName()))
+                        .collect(Collectors.toList()));
+              }
+            } else if (rowObj instanceof Map) {
+              Map ontologyTerm = (Map) row.get(c.getName());
+              row.put(c.getName(), ontologyTerm.get("ontologyTermURI"));
+            } else {
+              throw new Exception(
+                  "Expected ontology row to be instance of map or list but was "
+                      + rowObj.getClass());
+            }
+          } else {
+            // list of maps
+            List<Map<String, Object>> listOfObjects =
+                (List<Map<String, Object>>) row.get(c.getName());
+            if (listOfObjects != null) {
+              row.put(
+                  c.getName(),
+                  listOfObjects.stream()
+                      .map(o -> prefix + o.get(ref.getName()))
+                      .collect(Collectors.toList()));
+            } else {
+              row.put(c.getName(), null);
+            }
+          }
+        }
+      }
+      // check if _molgenisid has been set via @id
+      if (row.get("@id") == null) {
+        row.put(
+            "@id",
+            path + table.getName() + "/" + row.get(table.getMetadata().getPrimaryKeys().get(0)));
+      }
     }
   }
 
